<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/container_padding"
        tools:context=".views.LoginFragment">

        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/emailLayout"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/login_email_hint"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintTop_toBottomOf="@id/emailLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_password_hint"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:text="@string/registerTitle"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintTop_toBottomOf="@id/passwordContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/loginBtn"
            android:layout_marginEnd="5dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:text="@string/loginTitle"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintTop_toBottomOf="@id/passwordContainer"
            app:layout_constraintStart_toEndOf="@id/registerBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="5dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
