<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/container_padding"
        tools:context=".views.OnBoardingInstructionsFragment">

        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/instructionsTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            />

        <TextView
            android:id="@+id/welcomeMessageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:text="@string/instructionsMessageTitle"
            app:layout_constraintTop_toBottomOf="@id/welcomeTitle"
            />

        <TextView
            android:id="@+id/welcomeMessageBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:text="@string/instructionsMessageBody"
            app:layout_constraintTop_toBottomOf="@id/welcomeMessageTitle"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="Begin"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>